2015-03-03  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_show_layout):
	Take the possible individual offset of each glyph into account.

2015-03-03  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_show_layout):
	Render glyphs one by one (previously we did it in groups, for
	simplicity). This will allow rendering them backwards.

2015-03-02  Xavi Artigas  <xartigas@fluendo.com>

	* testsuite/ttmlrender-play-0.10.sh:
	* testsuite/ttmlrender-record.sh:
	New tesuite scripts for more significant tests.

2015-03-02  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_init):
	Set default font family to Serif instead of Sans so my tesuite gold
	files are still valid. The spec does not say anything abot this,
	and any font family set in the TTML file is still respected.

2015-03-02  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_normalize_length):
	* src/gstttmlrender.c: (gst_ttmlrender_build_layouts):
	Fix build with gcc.

2015-03-02  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_build_layouts),
	(gst_ttmlrender_show_layout):
	Add support for Alpha in foreground and background colors.

2015-03-02  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlstyle.c: (gst_ttml_style_gen_pango_markup):
	Missed file in previous commit. Doh!

2015-02-28  Xavi Artigas  <xartigas@fluendo.com>

	* src\gstttmlattribute.c:
	* src\gstttmlattribute.h:
	* src\gstttmlrender.c:
	* src\gstttmlspan.c:
	* src\gstttmlstate.c:
	* src\gstttmlstyle.c:
	* src\gstttmlstyle.h:
	Another VERY INTRUSIVE commit. In the previous commit caps nego was delayed
	to buffer-generation time. This means that length normalization cannot
	happen at parse-time anymore, for most of the lengths need to know the frame
	size, for example.
	Now normalization happens BOTH during parsing and rendering, and is resolved