@@ -1,5 +1,17 @@
 2015-03-03  Xavi Artigas  <xartigas@fluendo.com>
 
+	* src/gstttmlattribute.c: (gst_ttml_attribute_parse):
+	* src/gstttmlattribute.h:
+	* src/gstttmlenums.h:
+	* src/gstttmlrender.c: (gst_ttmlrender_pango_attr_reverse_new),
+	(gst_ttmlrender_build_layouts), (gst_ttmlrender_show_layout),
+	(gst_ttmlrender_init):
+	* src/gstttmlutils.c:
+	* src/gstttmlutils.h:
+	Add support for reverse (Right-to-Left) text.
+
+2015-03-03  Xavi Artigas  <xartigas@fluendo.com>
+
 	* src/gstttmlrender.c: (gst_ttmlrender_show_layout):
 	Take the possible individual offset of each glyph into account.
 
